# PascalCompiler

./: .gitignore  ASTNode.cpp  ASTNode.h  CMakeLists.txt  GetClassName.cpp  NodeTypes.h  SPL.l  SPL.y  SystemCall.cpp  SystemCall.h  Utility.cpp  Utility.h  flex.sh  lexer.cpp  lexer.hpp  main.cpp  module.bc  parser.cpp  parser.hpp  temp.y
res/: a.pas  gcd.pas  naive.pas  test.pas  test2.pas
